# wettr

./: .gitignore  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  w.py
wettr/: cache.py  fahrenheit.py  main.py  test_fahrenheit.py
